@@ -1,3 +1,9 @@
+2002-05-14  Ryan Nunn  <triforce@merlin.net.au>
+	* cheat.*, gamerend.cc, objs/objs.h : Fixing Namespace, and forcing int
+	  to bool problems.
+	* gumps/Face_stats.cc : Fixed old problem with stat bars not being
+	  clamped if a stat was larger than the max.
+
 2002-05-13  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actors.cc: In rewriting with the 'combine' flag, I also changed
